--- a/templates/alumnxs/inicio-alumnxs.html
+++ b/templates/alumnxs/inicio-alumnxs.html
@@ -44,6 +44,19 @@
         </ul>
     </div>
 
+
+{% with messages = get_flashed_messages() %}
+  {% if messages %}
+    <ul class="flashes">
+      {% for message in messages %}
+        <li>{{ message }}</li>
+      {% endfor %}
+    </ul>
+  {% endif %}
+{% endwith %}
+
+
+
 <!-- Sección de inicio / Bienvenida -->
 <section class="welcome-section">
 
