--- a/templates/teachers/inicio-teachers.html
+++ b/templates/teachers/inicio-teachers.html
@@ -8,11 +8,11 @@
     <title>Evaluación Docente</title>
 
     <!-- link a los styles -->
-    <link href="../assets/css/base.css" rel="stylesheet">
-    <link href="../assets/css/components.css" rel="stylesheet">
-    <link href="../assets/css/layout.css" rel="stylesheet">
+    <link href="../../static/css/base.css" rel="stylesheet">
+    <link href="../../static/css/components.css" rel="stylesheet">
+    <link href="../../static/css/layout.css" rel="stylesheet">
 
-    <link rel="icon" type="image/jpg" href="../assets/css/img/teacher-icon.png">
+    <link rel="icon" type="image/jpg" href="../../static/css/img/teacher-icon.png">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,13 +22,11 @@
     <!-- Navigation -->
     <nav id="navbar">
         <div class="nav-container">
-            <div class="logo"><img src="../assets/css/img/teacher-icon.png" width="40" height="60">
+            <div class="logo"><img src="../../static/css/img/teacher-icon.png" width="40" height="60">
             Evaluación Docente
             </div>
             <ul class="nav-links">
-                <li><a href="inicio-alumnxs.html">Inicio</a></li>
-                <li><a href="planes.html">Cuestionarios</a></li>
-                <li><a href="contacto.html">Ayuda</a></li>
+                <li><a href="#">Ayuda</a></li>
             </ul>
         </div>
     </nav>
@@ -36,9 +34,7 @@
     <!-- Mobile Menu -->
     <div class="mobile-menu" id="mobileMenu">
         <ul class="mobile-nav-links">
-            <li><a href="inicio-alumnxs.html">Inicio</a></li>
-            <li><a href="planes.html">Cuestionarios</a></li>
-                <li><a href="contacto.html">Ayuda</a></li>
+            <li><a href="#">Ayuda</a></li>
         </ul>
     </div>
 
@@ -50,9 +46,12 @@
   </div>
 
   <div class="welcome-image">
-    <img src="../assets/css/img/teacher-icon.png" class="avatar">
+    <img src="../../static/css/img/teacher-icon.png" class="avatar">
   </div>
 </section>
+
+<section class=""
+
 
 <!-- Footer -->
   <footer class="footer">
