--- a/static/css/components.css
+++ b/static/css/components.css
@@ -182,3 +182,40 @@ span.psw a:hover {
   opacity: 0.85;
   transform: scale(1.03);
 }
+
+
+/* alertas al inicio de la página después de cualquier acción que redireccione al inicio */
+.alert-section{
+  padding-top: 20px;
+  padding-bottom: 20px;
+  background-color: var(--light-bg);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+}
+
+.flashes {
+  width: 20%;
+  background-color: var(--yellow);
+  border: 2px solid var(--orange);
+  border-radius: 50px;
+  padding: 2rem;
+  text-align: center;
+  align-items: center;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  transition: transform 0.25s ease, box-shadow 0.25s ease;
+}
+
+.flashes:hover {
+  transform: translateY(-5px);
+  box-shadow: 0px 6px 14px rgba(0, 0, 0, 0.15);
+}
+
+.flashes li{
+  text-decoration: none;
+  font-family: "Nunito", sans-serif;
+  font-size: 1.2rem;
+  font-weight: bolder;
+  color: var(--orange);
+}
