--- a/templates/teachers/inicio-teachers.html
+++ b/templates/teachers/inicio-teachers.html
@@ -100,6 +100,12 @@
   {% endif %}
 </div>
 
+<div class="download_res_section">
+  <a href="{{ url_for('download_teacher_report') }}" class="download_res_button">
+    Descargar reporte PDF
+  </a>
+</div>
+
 
 <script>
   // URL canónica para el endpoint unificado en Flask
