consultas done w/ style

--- a/templates/admin/inicio-admin.html
+++ b/templates/admin/inicio-admin.html
@@ -73,8 +73,8 @@
   <h1>Panel de Administración</h1>
 
   <div class="filters">
-    <input type="text" id="search" placeholder="Buscar por nombre o matrícula">
-    <select id="role-filter">
+    
+    <select id="role-filter" class="role-filter">
       <option value="">Todos los roles</option>
       <option value="alumnx">Alumnxs</option>
       <option value="docente">Docentes</option>
