consultas done w/ style smtms working

--- a/static/css/pages/admin-dashboard.css
+++ b/static/css/pages/admin-dashboard.css
@@ -22,6 +22,7 @@ h1, h2 {
 
 /* ---------- Filtros ---------- */
 .filters {
+    font-family: "Nunito", sans-serif;
   display: flex;
   justify-content: center;
   align-items: center;
