--- a/templates/admin/inicio-admin.html
+++ b/templates/admin/inicio-admin.html
@@ -71,7 +71,7 @@
 
 <section class="admin-dashboard">
   <h1>Panel de Administración</h1>
-
+<!-- Sección de inicio / Bienvenida 
   <div class="filters">
     
     <select id="role-filter" class="role-filter">
@@ -82,7 +82,7 @@
     </select>
     <button id="apply-filter">Filtrar</button>
   </div>
-
+-->
   <table id="users-table">
     <thead>
       <tr>
