--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
 
 
 
-    <link rel="icon" type="image/jpg" href="index-img/border-logo.png">
+    <link rel="icon" type="image/jpg" href="../static/css/img/teacher-icon.png">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
